refactoring 1.1