@@ -8,7 +8,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21.PREVIEW'
+    sourceCompatibility = '21'
 }
 
 repositories {
@@ -26,19 +26,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
 
     // camel
-    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.5.0'
-    implementation 'org.apache.camel.kafkaconnector:camel-kafka-connector:4.0.3'
+    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.6.0'
+    implementation ('org.apache.camel.kafkaconnector:camel-kafka-connector:4.4.2') {
+        exclude group: 'com.sun.xml.bind', module: 'jaxb-core'
+    }
 
     // kafka
     implementation "org.springframework.kafka:spring-kafka:3.1.3"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
